feat: add nav(test)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="g-sidenav-show   bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
